--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 python-dotenv==1.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.32
+SQLAlchemy>=2.0.0
 starlette==0.37.2
 typing_extensions==4.12.2
 uvicorn==0.30.6
