works, omit test.db

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ __pycache__/
 /app/models/README.md
 /app/schemas/README.md
 /app/db/README.md
-/app/services/README.md
+/app/services/README.mdtest.db
