--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 boto3==1.35.0
-botocore==1.35.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
@@ -40,7 +39,7 @@ regex==2024.7.24
 requests==2.32.3
 s3transfer==0.10.2
 scikit-learn==1.5.1
-scipy==1.14.0
+scipy
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.32
@@ -51,5 +50,4 @@ tokenizers==0.20.0
 tqdm==4.66.5
 types-requests==2.32.0.20240712
 typing_extensions==4.12.2
-urllib3==2.2.2
 uvicorn==0.30.6
